--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-example-2015",
+  "name": "react-template",
   "version": "1.0.0",
-  "description": "This is a short performance demo I am making to benchmark how React is performing against in the Devtools profiles.",
+  "description": "A very basic react template",
   "main": "webpack.config.js",
   "dependencies": {
     "react": "^0.13.3"
