--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "A very basic react template",
   "main": "webpack.config.js",
   "dependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.1",
+    "react-googlemaps": "^0.4.0",
+    "reactify": "^1.1.1"
   },
   "devDependencies": {
     "babel-core": "^5.6.17",
     "babel-loader": "^5.3.1",
     "css-loader": "^0.15.2",
+    "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.0",
     "node-libs-browser": "^0.5.2",
     "react-hot-loader": "^1.2.8",
@@ -25,9 +29,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/RamonGebben/react-template.git"
+    "url": "https://RamonGebben@bitbucket.org/demyst/local-wisdom.git"
   },
-  "author": "Oscar Lodriguez",
+  "author": "Ramon Gebben <ramon@ra-ge.net>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/RamonGebben/react-template.git/issues"
