--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A very basic react template",
   "main": "webpack.config.js",
   "dependencies": {
+    "hapi": "^11.0.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.1",
-    "react-googlemaps": "^0.4.0",
-    "reactify": "^1.1.1"
+    "reactify": "^1.1.1",
+    "rethinkdb": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^5.6.17",
