--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "webpack.config.js",
   "dependencies": {
     "hapi": "^11.0.3",
+    "history": "^1.13.0",
+    "leaflet": "^0.7.7",
     "react": "^0.14.0",
     "react-dom": "^0.14.1",
+    "react-router": "^1.0.0-rc4",
     "reactify": "^1.1.1",
     "rethinkdb": "^2.1.1"
   },
