--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A very basic react template",
   "main": "webpack.config.js",
   "dependencies": {
+    "dynamics.js": "0.0.8",
     "hapi": "^11.0.3",
     "history": "^1.13.0",
     "leaflet": "^0.7.7",
+    "lodash": "^3.10.1",
+    "raw-loader": "^0.5.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.1",
     "react-router": "^1.0.0-rc4",
@@ -18,6 +21,9 @@
     "babel-loader": "^5.3.1",
     "css-loader": "^0.15.2",
     "file-loader": "^0.8.4",
+    "gulp": "^3.9.0",
+    "gulp-markdown-to-json": "^0.2.1",
+    "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^1.6.0",
     "node-libs-browser": "^0.5.2",
     "react-hot-loader": "^1.2.8",
