--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "A very basic react template",
   "main": "webpack.config.js",
   "dependencies": {
-    "dynamics.js": "0.0.8",
-    "hapi": "^11.0.3",
     "history": "^1.13.0",
     "leaflet": "^0.7.7",
     "lodash": "^3.10.1",
@@ -13,8 +11,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.1",
     "react-router": "^1.0.0-rc4",
-    "reactify": "^1.1.1",
-    "rethinkdb": "^2.1.1"
+    "reactify": "^1.1.1"
   },
   "devDependencies": {
     "babel-core": "^5.6.17",
