First try on CI

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "build": "TARGET=build webpack",
     "start": "TARGET=dev webpack-dev-server --devtool eval-source --progress --colors --hot --inline --history-api-fallback",
-    "deploy":"gulp; git add build && git commit -m 'deploy with npm'; git subtree push --prefix build origin gh-pages"
+    "deploy":"gulp; npm run build; git add build && git commit -m 'deploy with npm'; git subtree push --prefix build origin gh-pages"
   },
   "repository": {
     "type": "git",
