--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: node_js
 node_js:
-  - iojs
-  - '0.12'
-  - '0.10'
-matrix:
-  allow_failures:
-    - node_js: iojs
-    - node_js: '0.12'
+  - "4.1"
+  - "4.0"
+  - "0.12"
+  - "0.11"
+  - "0.10"
+  - "0.8"
+  - "0.6"
+  - "iojs"
+
+before_script:
+  - npm i gulp -g
+
+npm run deploy
