--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "private": true,
   "scripts": {
-    "build": "TARGET=build webpack",
+    "build": "gulp; TARGET=build webpack",
     "start": "TARGET=dev webpack-dev-server --devtool eval-source --progress --colors --hot --inline --history-api-fallback",
-    "deploy":"gulp; npm run build; git add build && git commit -m 'deploy with npm'; git subtree push --prefix build origin gh-pages"
+    "deploy":"npm run build; git add build && git commit -m 'deploy with npm';"
   },
   "repository": {
     "type": "git",
