--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ after_success: |
     git -c user.name='travis' -c user.email='travis' commit -m 'Push by Travis'
     # Make sure to make the output quiet, or else the API token will leak!
     # This works because the API key can replace your password.
-    git push -f -q https://RamonGebben:$GITHUB_API_KEY@github.com/RamonGebben/local-wisdom-gh-pages gh-pages &2>/dev/null
+    git push -f -q "https://RamonGebben:$GITHUB_API_KEY@github.com/RamonGebben/local-wisdom gh-pages"
     cd "$TRAVIS_BUILD_DIR"
   fi
