--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,16 @@ before_script:
 script: npm run build;
 
 after_success: |
-  if [ -n "$GITHUB_API_KEY" ]; then
-    cd "$TRAVIS_BUILD_DIR"
-    cd build
-    git init
-    git checkout -b gh-pages
-    git add .
-    git -c user.name='travis' -c user.email='travis' commit -m 'Push by Travis'
-    # Make sure to make the output quiet, or else the API token will leak!
-    # This works because the API key can replace your password.
-    git push -f -q "https://RamonGebben:$GITHUB_API_KEY@github.com/RamonGebben/local-wisdom gh-pages"
-    cd "$TRAVIS_BUILD_DIR"
-  fi
+    echo "$GITHUB_API_KEY"
+    if [ -n "$GITHUB_API_KEY" ]; then
+        cd "$TRAVIS_BUILD_DIR"
+        cd build
+        git init
+        git checkout -b gh-pages
+        git add .
+        git -c user.name='travis' -c user.email='travis' commit -m 'Push by Travis'
+        # Make sure to make the output quiet, or else the API token will leak!
+        # This works because the API key can replace your password.
+        git push -f -q "https://RamonGebben:$GITHUB_API_KEY@github.com/RamonGebben/local-wisdom gh-pages"
+        cd "$TRAVIS_BUILD_DIR"
+    fi
